--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Paws & Wheels</title>
+    <title>Helping Paws</title>
     <meta
       name="description"
       content="Free assistive devices for injured dogs. Because every pup deserves to run, play, and live their best life."
@@ -17,7 +17,7 @@
       <div class="container header-inner">
         <a class="brand" href="#top" aria-label="Paws & Wheels home">
           <span class="brand-mark" aria-hidden="true"></span>
-          <span class="brand-text">Paws &amp; Wheels</span>
+          <span class="brand-text">Helping Paws</span>
         </a>
 
         <nav class="nav" aria-label="Primary">
@@ -72,15 +72,18 @@
           <div class="split">
             <div class="split-left">
               <p>
-                At Paws &amp; Wheels, we believe that every dog deserves a chance at mobility and
-                happiness, regardless of physical challenges. Our nonprofit organization is
-                dedicated to providing free custom assistive devices to injured dogs in need.
+                Helping Paws is a project dedicated to improving the quality of life for small- to medium-sized dogs that experience mobility challenges, including loss of hind-leg function, limb absence, or paw damage. The goal of the project is to design and distribute affordable assistive devices—such as adjustable dog wheelchairs 
+                and paw support attachments—to reach 20 or more canine patients.
               </p>
 
               <p>
-                Founded with love and compassion, we work closely with veterinarians, rescue
-                organizations, and pet owners to ensure that no dog is left behind due to mobility
-                issues.
+                By leveraging advancements in 3D printing and cost-effective yet durable materials, 
+                Helping Paws aims to reduce the financial barriers associated with 
+                existing mobility solutions on the market. The resulting designs 
+                prioritize adjustability and adaptability, allowing a single device 
+                platform to support multiple dog sizes and breeds while maintaining 
+                strength, comfort, and functionality.
+
               </p>
 
               <p>
