--- a/index.html
+++ b/index.html
@@ -72,24 +72,24 @@
           <div class="split">
             <div class="split-left">
               <p>
-                Helping Paws is a project dedicated to improving the quality of life for small- to medium-sized dogs that experience mobility challenges, including loss of hind-leg function, limb absence, or paw damage. The goal of the project is to design and distribute affordable assistive devices—such as adjustable dog wheelchairs 
-                and paw support attachments—to reach 20 or more canine patients.
+                Helping Paws is a project dedicated to improving the quality of life for 
+                small- to medium-sized dogs that experience mobility challenges, 
+                including limited hind leg function or limb absence. 
+                The goal of the project is to design and distribute affordable 
+                assistive devices—such as adjustable dog wheelchairs 
+                to canine patients.
               </p>
 
               <p>
-                By leveraging advancements in 3D printing and cost-effective yet durable materials, 
+                By leveraging 3D printing and cost-effective but durable materials, 
                 Helping Paws aims to reduce the financial barriers associated with 
                 existing mobility solutions on the market. The resulting designs 
                 prioritize adjustability and adaptability, allowing a single device 
-                platform to support multiple dog sizes and breeds while maintaining 
-                strength, comfort, and functionality.
+                platform to support multiple dog sizes and breeds but keeping 
+                functionality.
 
               </p>
 
-              <p>
-                Through the generosity of our donors and the dedication of our volunteers, we help
-                dogs regain their freedom to run, play, and explore the world around them.
-              </p>
             </div>
 
             <div class="split-right">
