--- a/index.html
+++ b/index.html
@@ -112,8 +112,7 @@
         <div class="container">
           <h2 class="section-title">Assistive Devices</h2>
           <p class="section-subtitle">
-            We provide a range of custom assistive devices, carefully designed and fitted to meet
-            the unique needs of every dog.
+            We currently offer assistive wheelchairs but are working on other options like splint and a paw cover for damaged paws.
           </p>
 
           <div class="grid grid-3">
