--- a/index.html
+++ b/index.html
@@ -125,23 +125,7 @@
               </div>
             </article>
 
-            <article class="card device-card">
-              <div class="device-img device-img-2" role="img" aria-label="Dog wearing prosthetic limbs"></div>
-              <div class="card-body">
-                <h3>Prosthetic Limbs</h3>
-                <p class="muted">Custom prosthetics and orthotics for safe, stable movement.</p>
-                <button class="linklike" data-modal="prosthetics">Hover to learn more</button>
-              </div>
-            </article>
-
-            <article class="card device-card">
-              <div class="device-img device-img-3" role="img" aria-label="Dog wearing support harness"></div>
-              <div class="card-body">
-                <h3>Support Harnesses</h3>
-                <p class="muted">Comfort harnesses and slings for rehab and daily support.</p>
-                <button class="linklike" data-modal="harnesses">Hover to learn more</button>
-              </div>
-            </article>
+      
           </div>
         </div>
       </section>
@@ -160,36 +144,18 @@
               <div class="story-panel card card-soft">
                 <div class="story-head">
                   <div>
-                    <h3>Luna</h3>
-                    <p class="muted">Beagle</p>
+                    <h3>Chip</h3>
+                    <p class="muted">Havanese</p>
                   </div>
-                  <span class="pill">Device: Custom Prosthetic Leg</span>
+                  <span class="pill">Device: Assistive Wheelchair</span>
                 </div>
                 <p class="muted">
-                  Luna lost her front leg in an accident but never lost her spirit. With her custom
-                  prosthetic, she’s back to chasing squirrels and exploring the neighborhood. Her
-                  owner says she’s more confident than ever.
+                  Chip had little to no mobility in his hind legs after his TPLO surgery on a torn ACL.
                 </p>
               </div>
             </article>
 
-            <article class="story story-duo">
-              <div class="story-panel card card-soft">
-                <div class="story-head">
-                  <div>
-                    <h3>Max</h3>
-                    <p class="muted">German Shepherd</p>
-                  </div>
-                  <span class="pill">Device: Mobility Wheelchair</span>
-                </div>
-                <p class="muted">
-                  After a spinal injury left Max’s rear legs paralyzed, his family feared his active
-                  days were over. His custom wheelchair changed everything. Now Max hikes trails,
-                  goes on beach runs, and participates in adaptive dog sports.
-                </p>
-              </div>
-              <div class="story-media story-media-2" role="img" aria-label="German shepherd in a wheelchair at the beach"></div>
-            </article>
+            
           </div>
         </div>
       </section>
