--- a/index.html
+++ b/index.html
@@ -151,11 +151,27 @@
                 </div>
                 <p class="muted">
                   Chip had little to no mobility in his hind legs after his TPLO surgery on a torn ACL.
+                  The wheelchair allowed him to rehabilitate his hind legs while not having to be confined.
                 </p>
               </div>
             </article>
 
-            
+            <article class="story story-feature">
+              <div class="story-media story-media-1" role="img" aria-label="Happy beagle running"></div>
+              <div class="story-panel card card-soft">
+                <div class="story-head">
+                  <div>
+                    <h3>Mochi</h3>
+                    <p class="muted">Corgi</p>
+                  </div>
+                  <span class="pill">Device: Assistive Wheelchair</span>
+                </div>
+                <p class="muted">
+                  Mochi is not able to move her hind legs at al after a spine injury, severely limiting her mobility.
+                  Currently in progress, we hope the wheelchair will help Mochi regain her mobility.
+                </p>
+              </div>
+            </article>
           </div>
         </div>
       </section>
